unpackaged/main/default/objects/Opportunity/fields/CircuiTree_ID__c.field-meta.xml
<CustomField>
    <fullName>CircuiTree_ID__c</fullName>
    <description>Donation ID from CircuiTree</description>
    <externalId>true</externalId>
    <label>CircuiTree ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>