unpackaged/main/default/objects/Opportunity/fields/JHID__c.field-meta.xml
<CustomField>
    <fullName>JHID__c</fullName>
    <description>JHD Generated Unique Identifier</description>
    <externalId>true</externalId>
    <label>JHID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>