unpackaged/main/default/objects/Opportunity/fields/Sponsorship_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Recipient_Name__c</fullName>
    <label>Sponsorship Recipients&#39; Names</label>
    <length>75</length>
    <type>Text</type>
</CustomField>