unpackaged/main/default/objects/Opportunity/fields/Sponsorship_Recipient_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Recipient_s_Email__c</fullName>
    <label>Sponsorship Recipient&#39;s Email</label>
    <type>Email</type>
</CustomField>