unpackaged/main/default/objects/Opportunity/recordTypes/Giving_Tree_Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Giving_Tree_Sponsorship</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Record type used for Giving Tree Sponsorship donations</description>
    <label>Giving Tree Sponsorship</label>
</RecordType>