unpackaged/main/default/objects/Opportunity/recordTypes/Grant.recordType-meta.xml
<RecordType>
    <fullName>Grant</fullName>
    <active>true</active>
    <businessProcess>Grant</businessProcess>
    <description>Grant Received</description>
    <label>Grant</label>
</RecordType>