unpackaged/main/default/objects/Opportunity/listViews/My_Donations.listView-meta.xml
<ListView>
    <fullName>My_Donations</fullName>
    <columns>npsp__Primary_Contact__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Donations</label>
</ListView>