unpackaged/main/default/objects/Opportunity/listViews/New_This_Week.listView-meta.xml
<ListView>
    <fullName>New_This_Week</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>npsp__Primary_Contact__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
</ListView>