unpackaged/main/default/objects/Opportunity/listViews/X2022_Pledged_Gifts.listView-meta.xml
<ListView>
    <fullName>X2022_Pledged_Gifts</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>npsp__Primary_Contact__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>npsp__Ask_Date__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Pledged</value>
    </filters>
    <label>2022 Pledged Gifts</label>
</ListView>